@@ -188,6 +188,7 @@
 * Wepay/Wompi/CommerceHub: Normalize API_VERSION usage [sumit-sharmas] #5490
 * CheckoutV2: Pass udf5 field in metadata [mjdonga] #5507
 * DLocal: Add issuer_identification_number as bin in Card object [adarsh-spreedly] #5499
+* Normalize API Versions for litle, mercado_pago and mundipagg [mjdonga] #5518
 
 == Version 1.137.0 (August 2, 2024)
 * Unlock dependency on `rexml` to allow fixing a CVE (#5181).
